Initial JavaCodegen test pass (but no output)